# bad_apple

./: .gitignore  .gitmodules  Cargo.toml  README.md  TESTING_GUIDE.md  TEST_GENERATION_SUMMARY.md  TEST_SUMMARY.md  UNIT_TESTS_COMPLETE.md  deny.toml  rustfmt.toml
ascii-linker/: Cargo.toml  LICENSE  README.md
ascii-linker/src/: lib.rs
asciic/: Cargo.toml  README.md
asciic/src/: children.rs  cli.rs  colours.rs  error.rs  installer.rs  main.rs  primitives.rs  util.rs
asciild/: Cargo.toml  README.md
asciild/src/: lib.rs
asciix/: Cargo.toml  README.md
asciix/src/: bidirectional_channel.rs  main.rs  reader.rs
libasciic/: Cargo.toml  README.md
libasciic/src/: error.rs  lib.rs
src/: main.rs
