[package]
name = "asciic"
version = "2.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libasciic = { path = "../libasciic", features = ["clap"] }
clap = { version = "4.5.51", features = ["cargo"] }
ctrlc = { version = "3.2.3", default-features = false }
image = { default-features = false, version = "0.25.9" }
rayon = "1.5.3"
reqwest = { version = "0.12.24", features = ["blocking", "native-tls"], default-features = false }
ron = { default-features = false, version = "0.12.0" }
serde = { version = "1.0.228", default-features = false }
tar = { default-features = false, version = "0.4.38" }
tempfile = { default-features = false, version = "3.3.0" }
user_dirs = "0.2.0"
zstd = { default-features = false, version = "0.13.3" }
which = "8.0.0"
indicatif = { default-features = false, version = "0.18.3" }
terminal_size = "0.4.3"
